<resources>
    <string name="app_name">Train My Brain</string>
    <string name="go_R">GO!</string>
    <string name="_30s_R">30s</string>
    <string name="_0_0_R">0/0</string>
    <string name="_15_5_R">15 + 5</string>
    <string name="_5_R">5</string>
    <string name="correct_R">CORRECT</string>
    <string name="play_again_R">PLAY AGAIN</string>
    <string name="start_R">START!</string>
    <string name="_60s">60s</string>
</resources>
